src/snapshots/aidl_parser__rules__tests__parcelable_with_errors.snap
---
source: src/rules.rs
assertion_line: 277
expression: res

---
Parcelable(
  name: "Tomato",
  members: [
    Member(
      name: "member1",
      type: Type(
        name: "int",
        kind: primitive,
        symbol_range: "...",
        full_range: "...",
      ),
      symbol_range: "...",
      full_range: "...",
    ),
    Member(
      name: "member3",
      type: Type(
        name: "String",
        kind: string,
        symbol_range: "...",
        full_range: "...",
      ),
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  full_range: "...",
  symbol_range: "...",
)
