src/snapshots/aidl_parser__rules__tests__parcelable_with_javadoc.snap
---
source: src/rules.rs
expression: res

---
Parcelable(
  name: "Tomato",
  members: [],
  doc: Some("Parcelable documentation"),
  full_range: "...",
  symbol_range: "...",
)
