src/snapshots/aidl_parser__rules__tests__type_android_builtin-2.snap
---
source: src/rules.rs
assertion_line: 588
expression: res

---
Type(
  name: "IBinder",
  kind: i_binder,
  symbol_range: "...",
  full_range: "...",
)
