src/snapshots/aidl_parser__rules__tests__type_android_builtin-3.snap
---
source: src/rules.rs
expression: res
---
Type(
  name: "FileDescriptor",
  kind: android_type(file_descriptor),
  symbol_range: "...",
  full_range: "...",
)
