src/snapshots/aidl_parser__rules__tests__type_android_builtin-4.snap
---
source: src/rules.rs
expression: res
---
Type(
  name: "ParcelFileDescriptor",
  kind: android_type(parcel_file_descriptor),
  symbol_range: "...",
  full_range: "...",
)
