src/snapshots/aidl_parser__rules__tests__type_android_builtin.snap
---
source: src/rules.rs
expression: res
---
Type(
  name: "ParcelableHolder",
  kind: android_type(parcelable_holder),
  symbol_range: "...",
  full_range: "...",
)
