src/snapshots/aidl_parser__rules__tests__type_array-2.snap
---
source: src/rules.rs
expression: res

---
Type(
  name: "Array",
  kind: Invalid,
  generic_types: [
    Type(
      name: "String",
      kind: String,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
