src/snapshots/aidl_parser__rules__tests__type_array.snap
---
source: src/rules.rs
expression: res

---
Type(
  name: "Array",
  kind: Array,
  generic_types: [
    Type(
      name: "float",
      kind: Primitive,
      symbol_range: "...",
    ),
  ],
  symbol_range: "...",
)
