src/snapshots/aidl_parser__rules__tests__type_array_bidirectional.snap
---
source: src/rules.rs
assertion_line: 594
expression: res

---
Type(
  name: "Array",
  kind: array,
  generic_types: [
    Type(
      name: "Array",
      kind: array,
      generic_types: [
        Type(
          name: "int",
          kind: primitive,
          symbol_range: "...",
          full_range: "...",
        ),
      ],
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  symbol_range: "...",
  full_range: "...",
)
