src/snapshots/aidl_parser__rules__tests__type_char_sequence.snap
---
source: src/rules.rs
assertion_line: 578
expression: res

---
Type(
  name: "CharSequence",
  kind: char_sequence,
  symbol_range: "...",
  full_range: "...",
)
