src/snapshots/aidl_parser__rules__tests__type_custom.snap
---
source: src/rules.rs
assertion_line: 570
expression: res

---
Type(
  name: "TypeName",
  kind: custom,
  symbol_range: "...",
  full_range: "...",
)
