src/snapshots/aidl_parser__rules__tests__type_custom_with_namespace.snap
---
source: src/rules.rs
assertion_line: 578
expression: res

---
Type(
  name: "com.example.TypeName",
  kind: custom,
  symbol_range: "...",
)
